; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_zstd.c___zstd_compress.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_zstd.c___zstd_compress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zstd_ctx = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32*, i8*)* @__zstd_compress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__zstd_compress(i32* %0, i32 %1, i32* %2, i32* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca %struct.zstd_ctx*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  %15 = load i8*, i8** %11, align 8
  %16 = bitcast i8* %15 to %struct.zstd_ctx*
  store %struct.zstd_ctx* %16, %struct.zstd_ctx** %13, align 8
  %17 = call i32 (...) @zstd_params()
  store i32 %17, i32* %14, align 4
  %18 = load %struct.zstd_ctx*, %struct.zstd_ctx** %13, align 8
  %19 = getelementptr inbounds %struct.zstd_ctx, %struct.zstd_ctx* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %9, align 8
  %22 = load i32*, i32** %10, align 8
  %23 = load i32, i32* %22, align 4
  %24 = load i32*, i32** %7, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %14, align 4
  %27 = call i64 @ZSTD_compressCCtx(i32 %20, i32* %21, i32 %23, i32* %24, i32 %25, i32 %26)
  store i64 %27, i64* %12, align 8
  %28 = load i64, i64* %12, align 8
  %29 = call i64 @ZSTD_isError(i64 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %5
  %32 = load i32, i32* @EINVAL, align 4
  %33 = sub nsw i32 0, %32
  store i32 %33, i32* %6, align 4
  br label %38

34:                                               ; preds = %5
  %35 = load i64, i64* %12, align 8
  %36 = trunc i64 %35 to i32
  %37 = load i32*, i32** %10, align 8
  store i32 %36, i32* %37, align 4
  store i32 0, i32* %6, align 4
  br label %38

38:                                               ; preds = %34, %31
  %39 = load i32, i32* %6, align 4
  ret i32 %39
}

declare dso_local i32 @zstd_params(...) #1

declare dso_local i64 @ZSTD_compressCCtx(i32, i32*, i32, i32*, i32, i32) #1

declare dso_local i64 @ZSTD_isError(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
